# VoicesOfTheVoid

./: .gitignore  LICENSE  README.md  install_ai.sh
client/: CMakeLists.txt  QtLoader.cmake  client.qrc  conan_install.sh  conanfile.py
client/inc/logic/: network.h
client/inc/ui/: mainPageModel.h  mainPageViewModel.h
client/inc/utils/: config.h
client/res/: AppIcon.icns
client/res/ui/: form.qml
client/src/: main.cpp
client/src/logic/: network.cpp
client/src/ui/: mainPageModel.cpp  mainPageViewModel.cpp
client/src/utils/: config.cpp
server/: CMakeLists.txt  Readme.md  conan_install.sh  conanfile.py  config.json
server/inc/ai_client/: ai.h
server/inc/ext/: json.h
server/inc/logic/: logic.h  promt.h  strategy.h  user.h
server/inc/logic/strategy/: ai_strategy.h  core_corrupt_stategy.h  echo_strategy.h  prepared_strategy.h
server/inc/server/: http_server.h
server/inc/utils/: config.h  random.h
server/src/: main.cpp
server/src/ai_client/: ai.cpp
server/src/logic/: logic.cpp  user.cpp
server/src/logic/strategy/: ai_strategy.cpp  core_corrupt_strategy.cpp  echo_strategy.cpp  prepared_strategy.cpp
server/src/server/: http_server.cpp
server/src/utils/: config.cpp  random.cpp
shared/: error_codes.h  strategies.h
